githubhy published a site update

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Index</a></li>
+<li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="1" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i><b>1</b> 魏晋</a><ul>
 <li class="chapter" data-level="1.1" data-path="weijin.html"><a href="weijin.html#simafang"><i class="fa fa-check"></i><b>1.1</b> 司马防</a><ul>
-<li class="chapter" data-level="1.1.1" data-path="weijin.html"><a href="weijin.html#三国志---武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志 - 武帝纪</a></li>
+<li class="chapter" data-level="1.1.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书---武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志 - 魏书 - 武帝纪</a></li>
 </ul></li>
 <li class="chapter" data-level="1.2" data-path="weijin.html"><a href="weijin.html#司马懿"><i class="fa fa-check"></i><b>1.2</b> 司马懿</a><ul>
 <li class="chapter" data-level="1.2.1" data-path="weijin.html"><a href="weijin.html#晋书---宣帝"><i class="fa fa-check"></i><b>1.2.1</b> 晋书 - 宣帝</a></li>
@@ -105,8 +105,9 @@
 <p class="author"><em>林峰</em></p>
 <p class="date"><em>2022-05-05</em></p>
 </div>
-<div id="index" class="section level1 unnumbered hasAnchor">
-<h1>Index<a href="index.html#index" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<div id="section" class="section level1 unnumbered">
+<h1></h1>
+
 </div>
             </section>
 
