--- a/404.html
+++ b/404.html
@@ -70,10 +70,10 @@
       <nav role="navigation">
 
 <ul class="summary">
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Index</a></li>
+<li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="1" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i><b>1</b> 魏晋</a><ul>
 <li class="chapter" data-level="1.1" data-path="weijin.html"><a href="weijin.html#simafang"><i class="fa fa-check"></i><b>1.1</b> 司马防</a><ul>
-<li class="chapter" data-level="1.1.1" data-path="weijin.html"><a href="weijin.html#三国志---武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志 - 武帝纪</a></li>
+<li class="chapter" data-level="1.1.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书---武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志 - 魏书 - 武帝纪</a></li>
 </ul></li>
 <li class="chapter" data-level="1.2" data-path="weijin.html"><a href="weijin.html#司马懿"><i class="fa fa-check"></i><b>1.2</b> 司马懿</a><ul>
 <li class="chapter" data-level="1.2.1" data-path="weijin.html"><a href="weijin.html#晋书---宣帝"><i class="fa fa-check"></i><b>1.2.1</b> 晋书 - 宣帝</a></li>
