--- a/references.html
+++ b/references.html
@@ -78,6 +78,12 @@
 <li class="chapter" data-level="1.2" data-path="weijin.html"><a href="weijin.html#司马懿"><i class="fa fa-check"></i><b>1.2</b> 司马懿</a><ul>
 <li class="chapter" data-level="1.2.1" data-path="weijin.html"><a href="weijin.html#晋书---宣帝"><i class="fa fa-check"></i><b>1.2.1</b> 晋书 - 宣帝</a></li>
 </ul></li>
+<li class="chapter" data-level="1.3" data-path="weijin.html"><a href="weijin.html#曹爽"><i class="fa fa-check"></i><b>1.3</b> 曹爽</a><ul>
+<li class="chapter" data-level="1.3.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书九---曹爽传"><i class="fa fa-check"></i><b>1.3.1</b> 三国志 - 魏书九 - 曹爽传</a></li>
+</ul></li>
+<li class="chapter" data-level="1.4" data-path="weijin.html"><a href="weijin.html#曹操"><i class="fa fa-check"></i><b>1.4</b> 曹操</a><ul>
+<li class="chapter" data-level="1.4.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书一---武帝纪"><i class="fa fa-check"></i><b>1.4.1</b> 三国志 - 魏书一 - 武帝纪</a></li>
+</ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>参考文献</a></li>
@@ -104,6 +110,12 @@
 <h1>参考文献<a href="references.html#references" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 
 </div>
+
+
+
+
+
+
 
 
 
