--- a/references.html
+++ b/references.html
@@ -23,14 +23,14 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-05" />
+<meta name="date" content="2022-05-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="weijin.html"/>
+<link rel="prev" href="曹操.html"/>
 
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -41,6 +41,7 @@
 <link href="libs/gitbook-2.6.7/css/plugin-search.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-fontsettings.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-clipboard.css" rel="stylesheet" />
+
 
 
 
@@ -70,25 +71,29 @@
       <nav role="navigation">
 
 <ul class="summary">
+<li><a href=".">My History Reading Notes</a></li>
+
+<li class="divider"></li>
 <li><a href="index.html#section"></a></li>
 <li class="chapter" data-level="1" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i><b>1</b> 魏晋</a><ul>
-<li class="chapter" data-level="1.1" data-path="weijin.html"><a href="weijin.html#simafang"><i class="fa fa-check"></i><b>1.1</b> 司马防</a><ul>
-<li class="chapter" data-level="1.1.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书---武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志 - 魏书 - 武帝纪</a></li>
+<li class="chapter" data-level="1.1" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i><b>1.1</b> 司马防</a><ul>
+<li class="chapter" data-level="1.1.1" data-path="simafang.html"><a href="simafang.html#三国志---魏书---武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志 - 魏书 - 武帝纪</a></li>
 </ul></li>
-<li class="chapter" data-level="1.2" data-path="weijin.html"><a href="weijin.html#司马懿"><i class="fa fa-check"></i><b>1.2</b> 司马懿</a><ul>
-<li class="chapter" data-level="1.2.1" data-path="weijin.html"><a href="weijin.html#晋书---宣帝"><i class="fa fa-check"></i><b>1.2.1</b> 晋书 - 宣帝</a></li>
+<li class="chapter" data-level="1.2" data-path="司马懿.html"><a href="司马懿.html"><i class="fa fa-check"></i><b>1.2</b> 司马懿</a><ul>
+<li class="chapter" data-level="1.2.1" data-path="司马懿.html"><a href="司马懿.html#晋书---宣帝"><i class="fa fa-check"></i><b>1.2.1</b> 晋书 - 宣帝</a></li>
 </ul></li>
-<li class="chapter" data-level="1.3" data-path="weijin.html"><a href="weijin.html#曹爽"><i class="fa fa-check"></i><b>1.3</b> 曹爽</a><ul>
-<li class="chapter" data-level="1.3.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书九---曹爽传"><i class="fa fa-check"></i><b>1.3.1</b> 三国志 - 魏书九 - 曹爽传</a></li>
+<li class="chapter" data-level="1.3" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i><b>1.3</b> 曹爽</a><ul>
+<li class="chapter" data-level="1.3.1" data-path="曹爽.html"><a href="曹爽.html#三国志---魏书九---曹爽传"><i class="fa fa-check"></i><b>1.3.1</b> 三国志 - 魏书九 - 曹爽传</a></li>
 </ul></li>
-<li class="chapter" data-level="1.4" data-path="weijin.html"><a href="weijin.html#曹操"><i class="fa fa-check"></i><b>1.4</b> 曹操</a><ul>
-<li class="chapter" data-level="1.4.1" data-path="weijin.html"><a href="weijin.html#三国志---魏书一---武帝纪"><i class="fa fa-check"></i><b>1.4.1</b> 三国志 - 魏书一 - 武帝纪</a></li>
+<li class="chapter" data-level="1.4" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i><b>1.4</b> 曹操</a><ul>
+<li class="chapter" data-level="1.4.1" data-path="曹操.html"><a href="曹操.html#三国志---魏书一---武帝纪"><i class="fa fa-check"></i><b>1.4.1</b> 三国志 - 魏书一 - 武帝纪</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>参考文献</a></li>
 <li class="divider"></li>
 <li><a href="https://bookdown.org/baydap/bookdownplus/" target="blank">Supported by bookdownplus</a></li>
+
 </ul>
 
       </nav>
@@ -126,16 +131,26 @@
 
 
 
+
+
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
-<a href="weijin.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="曹操.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
+<script src="libs/gitbook-2.6.7/js/lunr.js"></script>
 <script src="libs/gitbook-2.6.7/js/clipboard.min.js"></script>
 <script src="libs/gitbook-2.6.7/js/plugin-search.js"></script>
 <script src="libs/gitbook-2.6.7/js/plugin-sharing.js"></script>
@@ -150,17 +165,17 @@ gitbook.start({
 "github": false,
 "facebook": true,
 "twitter": true,
-"linkedin": false,
-"weibo": false,
+"linkedin": true,
+"weibo": true,
 "instapaper": false,
 "vk": false,
 "whatsapp": false,
-"all": ["facebook", "twitter", "linkedin", "weibo", "instapaper"]
+"all": ["weibo", "facebook", "twitter", "linkedin", "instapaper", "whatsapp", "vk"]
 },
 "fontsettings": {
 "theme": "white",
-"family": "sans",
-"size": 2
+"family": "serif",
+"size": 3
 },
 "edit": {
 "link": null,
@@ -176,11 +191,15 @@ gitbook.start({
 },
 "download": null,
 "search": {
-"engine": "fuse",
+"engine": "lunr",
 "options": null
 },
 "toc": {
-"collapse": "none"
+"collapse": "none",
+"scroll_highlight": true
+},
+"toolbar": {
+"position": "fixed"
 }
 });
 });
