--- a/index.html
+++ b/index.html
@@ -75,18 +75,29 @@
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
-<li class="chapter" data-level="1" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i><b>1</b> 魏晋</a><ul>
-<li class="chapter" data-level="1.1" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i><b>1.1</b> 司马防</a><ul>
-<li class="chapter" data-level="1.1.1" data-path="simafang.html"><a href="simafang.html#三国志魏书一武帝纪"><i class="fa fa-check"></i><b>1.1.1</b> 三国志·魏书一·武帝纪</a></li>
+<li class="chapter" data-level="" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i>魏晋</a><ul>
+<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i>司马防</a><ul>
+<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>三国志·魏书一·武帝纪</a></li>
 </ul></li>
-<li class="chapter" data-level="1.2" data-path="司马懿.html"><a href="司马懿.html"><i class="fa fa-check"></i><b>1.2</b> 司马懿</a><ul>
-<li class="chapter" data-level="1.2.1" data-path="司马懿.html"><a href="司马懿.html#晋书宣帝"><i class="fa fa-check"></i><b>1.2.1</b> 晋书·宣帝</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html"><i class="fa fa-check"></i>司马懿</a><ul>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书宣帝"><i class="fa fa-check"></i>晋书·宣帝</a><ul>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏武"><i class="fa fa-check"></i>魏武</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏文"><i class="fa fa-check"></i>魏文</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏明"><i class="fa fa-check"></i>魏明</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#三少"><i class="fa fa-check"></i>三少</a><ul>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#正始八年247年"><i class="fa fa-check"></i>正始八年（247年）</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#正始九年248年"><i class="fa fa-check"></i>正始九年（248年）</a></li>
 </ul></li>
-<li class="chapter" data-level="1.3" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i><b>1.3</b> 曹爽</a><ul>
-<li class="chapter" data-level="1.3.1" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i><b>1.3.1</b> 三国志·魏书九·曹爽传</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#品性"><i class="fa fa-check"></i>品性</a></li>
 </ul></li>
-<li class="chapter" data-level="1.4" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i><b>1.4</b> 曹操</a><ul>
-<li class="chapter" data-level="1.4.1" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪-1"><i class="fa fa-check"></i><b>1.4.1</b> 三国志·魏书一·武帝纪</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i>曹爽</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i>三国志·魏书九·曹爽传</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
+<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪-1"><i class="fa fa-check"></i>三国志·魏书一·武帝纪</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
