--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#三少"><i class="fa fa-check"></i>三少</a><ul>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#正始八年247年"><i class="fa fa-check"></i>正始八年（247年）</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#正始九年248年"><i class="fa fa-check"></i>正始九年（248年）</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书-宣帝-嘉平元年"><i class="fa fa-check"></i>嘉平元年</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#品性"><i class="fa fa-check"></i>品性</a></li>
 </ul></li>
@@ -94,6 +95,9 @@
 <li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i>曹爽</a><ul>
 <li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i>三国志·魏书九·曹爽传</a><ul>
 <li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#正始十年249年"><i class="fa fa-check"></i>正始十年（249年）</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽得宣王奏事"><i class="fa fa-check"></i>爽得宣王奏事</a></li>
+</ul></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
