--- a/曹操.html
+++ b/曹操.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-07" />
+<meta name="date" content="2022-05-08" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -86,7 +86,7 @@
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏明"><i class="fa fa-check"></i>魏明</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#三少"><i class="fa fa-check"></i>三少</a><ul>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#正始八年247年"><i class="fa fa-check"></i>正始八年（247年）</a></li>
-<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#正始九年248年"><i class="fa fa-check"></i>正始九年（248年）</a></li>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书-司马懿-正始九年"><i class="fa fa-check"></i>正始九年（248年）</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书-宣帝-嘉平元年"><i class="fa fa-check"></i>嘉平元年</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#品性"><i class="fa fa-check"></i>品性</a></li>
@@ -97,6 +97,7 @@
 <li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
 <li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#正始十年249年"><i class="fa fa-check"></i>正始十年（249年）</a><ul>
 <li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽得宣王奏事"><i class="fa fa-check"></i>爽得宣王奏事</a></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽等伏诛"><i class="fa fa-check"></i>爽等伏诛</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
@@ -132,6 +133,7 @@
 <h3>三国志·魏书一·武帝纪<a href="曹操.html#三国志魏书一武帝纪-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>太祖武皇帝，沛国谯人也，姓曹，讳操，字孟德，汉相国参 <span style="color: magenta; font-size: 80%">曹参</span> 之后。①桓帝世，曹腾为中常侍、大长秋，封费亭侯。②养子嵩嗣，官至太尉，莫能审其生出本末。③嵩生太祖。</p>
 <p>①〔《曹瞒传》曰〕：太祖一名吉利，小字阿瞒。王沈《魏书》曰：其先出于黄帝。当高阳世，陆终之子曰安，是为曹姓。周武王克殷，存先世之后，封曹（快）〔侠〕于邾。春秋之世，与于盟会，逮至战国，为楚所灭。子孙分流，或家于沛。汉高祖之起，曹参以功封平阳侯，世袭爵土，绝而复绍，至今适嗣国于容城。②司马彪《续汉书》曰：腾父节，字元伟，素以仁厚称。邻人有亡豕者，与节豕相类，诣门认之，节不与争。后所亡豕自还其家，豕主人大惭，送所认豕，并辞谢节，节笑而受之，由是乡党贵叹焉。长子伯兴，次子仲兴，次子叔兴。腾字季兴，少除黄门从官。永宁元年，邓太后诏黄门，令选中黄门从官年少温谨者配皇太子书，腾应其选。太子特亲爱腾，饮食赏赐与众有异。顺帝即位，为小黄门，迁至中常侍、大长秋。在省闼三十余年，历事四帝，未尝有过。好进达贤能，终无所毁伤。其所称荐，若陈留虞放、边韶、南阳延固、张温、弘农张奂、颍川堂溪典等，皆致位公卿，而不伐其善。蜀郡太守因计吏修敬于腾，益州刺史种暠于函谷关搜得其笺，上太守，并奏腾内臣外交，所不当为，请免官治罪。帝曰：“笺自外来，腾书不出，非其罪也。”乃寝暠奏。腾不以介意，常称叹暠，以为嵩得事上之节。暠后为司徒，语人曰：“今日为公，乃曹常侍恩也。”腾之行事，皆此类也。桓帝即位，以腾先帝旧臣，忠孝彰著，封费亭侯，加位特进。太和三年，追尊腾曰高皇帝。③《续汉书》曰：嵩字巨高。质性敦慎，所在忠孝。为司隶校尉，灵帝擢拜大司农、大鸿胪，代崔烈为太尉。黄初元年，追尊嵩曰太皇帝。吴人作《曹瞒传》及郭颁《世语》并云：嵩，夏侯氏之子，夏侯惇之叔父。太祖于惇为从父兄弟。</p>
+<p><span style="color: red; font-size: 80%"> [峰按] 堂而皇之用盗狗，霸气。<a href="曹爽.html#三国志-曹爽-爽等伏诛">《三国志》</a></span></p>
 
 
 </div>
