githubhy published a site update

--- a/simafang.html
+++ b/simafang.html
@@ -30,8 +30,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="weijin.html"/>
-<link rel="next" href="司马懿.html"/>
+<link rel="prev" href="三国魏官员.html"/>
+<link rel="next" href="曹爽.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -75,12 +75,36 @@
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
-<li class="chapter" data-level="" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i>魏晋</a><ul>
-<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i>司马防</a><ul>
-<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>三国志·魏书一·武帝纪</a></li>
+<li class="chapter" data-level="" data-path="三国魏帝.html"><a href="三国魏帝.html"><i class="fa fa-check"></i>三国魏帝</a><ul>
+<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
+<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>《三国志·魏书一·武帝纪》</a></li>
 </ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="三国魏官员.html"><a href="三国魏官员.html"><i class="fa fa-check"></i>三国魏官员</a><ul>
+<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i>司马防</a><ul>
+<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html#三国志魏书一武帝纪-1"><i class="fa fa-check"></i>《三国志·魏书一·武帝纪》</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i>曹爽</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i>《三国志·魏书九·曹爽传》</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#正始十年249年"><i class="fa fa-check"></i>正始十年（249年）</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽得宣王奏事"><i class="fa fa-check"></i>爽得宣王奏事</a></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽等伏诛"><i class="fa fa-check"></i>爽等伏诛</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html"><i class="fa fa-check"></i>蒋济</a><ul>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#三国志-蒋济"><i class="fa fa-check"></i>《三国志·魏书十四·蒋济传》</a><ul>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#文帝"><i class="fa fa-check"></i>文帝</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#明帝"><i class="fa fa-check"></i>明帝</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#景初"><i class="fa fa-check"></i>景初</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#齐王"><i class="fa fa-check"></i>齐王</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="东晋帝.html"><a href="东晋帝.html"><i class="fa fa-check"></i>东晋帝</a><ul>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html"><i class="fa fa-check"></i>司马懿</a><ul>
-<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书宣帝"><i class="fa fa-check"></i>晋书·宣帝</a><ul>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书宣帝"><i class="fa fa-check"></i>《晋书·宣帝》</a><ul>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏武"><i class="fa fa-check"></i>魏武</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏文"><i class="fa fa-check"></i>魏文</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏明"><i class="fa fa-check"></i>魏明</a></li>
@@ -91,18 +115,6 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#品性"><i class="fa fa-check"></i>品性</a></li>
 </ul></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i>曹爽</a><ul>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i>三国志·魏书九·曹爽传</a><ul>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#正始十年249年"><i class="fa fa-check"></i>正始十年（249年）</a><ul>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽得宣王奏事"><i class="fa fa-check"></i>爽得宣王奏事</a></li>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽等伏诛"><i class="fa fa-check"></i>爽等伏诛</a></li>
-</ul></li>
-</ul></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
-<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪-1"><i class="fa fa-check"></i>三国志·魏书一·武帝纪</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
@@ -129,8 +141,8 @@
             <section class="normal" id="section-">
 <div id="simafang" class="section level2 hasAnchor">
 <h2>司马防<a href="simafang.html#simafang" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<div id="三国志魏书一武帝纪" class="section level3 hasAnchor">
-<h3>三国志·魏书一·武帝纪<a href="simafang.html#三国志魏书一武帝纪" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="三国志魏书一武帝纪-1" class="section level3 hasAnchor">
+<h3>《三国志·魏书一·武帝纪》<a href="simafang.html#三国志魏书一武帝纪-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>《曹瞒传》曰：为尚书右丞司马建公<span style="color: magenta; font-size: 80%">司马防</span>所举。及公为王，召建公到邺，与欢饮，谓建公曰：“孤今日可复作尉否？”建公曰：“昔举大王时，适可作尉耳。”王大笑。建公名防，司马宣王之父。臣松之案司马彪《序传》，建公不为右丞，疑此<span style="color: magenta; font-size: 80%">这件事</span>不然，而王隐《晋书》云 <span style="color: magenta; font-size: 80%">自《晋书·赵王司马伦传》房玄龄</span>赵王篡位，欲尊祖 <span style="color: magenta; font-size: 80%">司马防</span>为帝，博士马平议 <span style="color: magenta; font-size: 80%">马平|马平议？</span>称京兆府君昔举魏武帝为北部尉，贼不犯界，如此则为有征 <span style="color: magenta; font-size: 80%">证明</span>。</p>
 </div>
 </div>
@@ -139,8 +151,8 @@
           </div>
         </div>
       </div>
-<a href="weijin.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="司马懿.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="三国魏官员.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="曹爽.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
