--- a/曹操.html
+++ b/曹操.html
@@ -30,8 +30,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="曹爽.html"/>
-<link rel="next" href="references.html"/>
+<link rel="prev" href="三国魏帝.html"/>
+<link rel="next" href="三国魏官员.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -75,12 +75,36 @@
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
-<li class="chapter" data-level="" data-path="weijin.html"><a href="weijin.html"><i class="fa fa-check"></i>魏晋</a><ul>
-<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i>司马防</a><ul>
-<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>三国志·魏书一·武帝纪</a></li>
+<li class="chapter" data-level="" data-path="三国魏帝.html"><a href="三国魏帝.html"><i class="fa fa-check"></i>三国魏帝</a><ul>
+<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
+<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>《三国志·魏书一·武帝纪》</a></li>
 </ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="三国魏官员.html"><a href="三国魏官员.html"><i class="fa fa-check"></i>三国魏官员</a><ul>
+<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html"><i class="fa fa-check"></i>司马防</a><ul>
+<li class="chapter" data-level="" data-path="simafang.html"><a href="simafang.html#三国志魏书一武帝纪-1"><i class="fa fa-check"></i>《三国志·魏书一·武帝纪》</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i>曹爽</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i>《三国志·魏书九·曹爽传》</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#正始十年249年"><i class="fa fa-check"></i>正始十年（249年）</a><ul>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽得宣王奏事"><i class="fa fa-check"></i>爽得宣王奏事</a></li>
+<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽等伏诛"><i class="fa fa-check"></i>爽等伏诛</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html"><i class="fa fa-check"></i>蒋济</a><ul>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#三国志-蒋济"><i class="fa fa-check"></i>《三国志·魏书十四·蒋济传》</a><ul>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#文帝"><i class="fa fa-check"></i>文帝</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#明帝"><i class="fa fa-check"></i>明帝</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#景初"><i class="fa fa-check"></i>景初</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#齐王"><i class="fa fa-check"></i>齐王</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="东晋帝.html"><a href="东晋帝.html"><i class="fa fa-check"></i>东晋帝</a><ul>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html"><i class="fa fa-check"></i>司马懿</a><ul>
-<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书宣帝"><i class="fa fa-check"></i>晋书·宣帝</a><ul>
+<li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#晋书宣帝"><i class="fa fa-check"></i>《晋书·宣帝》</a><ul>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏武"><i class="fa fa-check"></i>魏武</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏文"><i class="fa fa-check"></i>魏文</a></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#魏明"><i class="fa fa-check"></i>魏明</a></li>
@@ -91,18 +115,6 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#品性"><i class="fa fa-check"></i>品性</a></li>
 </ul></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html"><i class="fa fa-check"></i>曹爽</a><ul>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志魏书九曹爽传"><i class="fa fa-check"></i>三国志·魏书九·曹爽传</a><ul>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-初"><i class="fa fa-check"></i>初</a></li>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#正始十年249年"><i class="fa fa-check"></i>正始十年（249年）</a><ul>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽得宣王奏事"><i class="fa fa-check"></i>爽得宣王奏事</a></li>
-<li class="chapter" data-level="" data-path="曹爽.html"><a href="曹爽.html#三国志-曹爽-爽等伏诛"><i class="fa fa-check"></i>爽等伏诛</a></li>
-</ul></li>
-</ul></li>
-</ul></li>
-<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
-<li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪-1"><i class="fa fa-check"></i>三国志·魏书一·武帝纪</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
@@ -129,26 +141,23 @@
             <section class="normal" id="section-">
 <div id="曹操" class="section level2 hasAnchor">
 <h2>曹操<a href="曹操.html#曹操" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<div id="三国志魏书一武帝纪-1" class="section level3 hasAnchor">
-<h3>三国志·魏书一·武帝纪<a href="曹操.html#三国志魏书一武帝纪-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="三国志魏书一武帝纪" class="section level3 hasAnchor">
+<h3>《三国志·魏书一·武帝纪》<a href="曹操.html#三国志魏书一武帝纪" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>太祖武皇帝，沛国谯人也，姓曹，讳操，字孟德，汉相国参 <span style="color: magenta; font-size: 80%">曹参</span> 之后。①桓帝世，曹腾为中常侍、大长秋，封费亭侯。②养子嵩嗣，官至太尉，莫能审其生出本末。③嵩生太祖。</p>
 <p>①〔《曹瞒传》曰〕：太祖一名吉利，小字阿瞒。王沈《魏书》曰：其先出于黄帝。当高阳世，陆终之子曰安，是为曹姓。周武王克殷，存先世之后，封曹（快）〔侠〕于邾。春秋之世，与于盟会，逮至战国，为楚所灭。子孙分流，或家于沛。汉高祖之起，曹参以功封平阳侯，世袭爵土，绝而复绍，至今适嗣国于容城。②司马彪《续汉书》曰：腾父节，字元伟，素以仁厚称。邻人有亡豕者，与节豕相类，诣门认之，节不与争。后所亡豕自还其家，豕主人大惭，送所认豕，并辞谢节，节笑而受之，由是乡党贵叹焉。长子伯兴，次子仲兴，次子叔兴。腾字季兴，少除黄门从官。永宁元年，邓太后诏黄门，令选中黄门从官年少温谨者配皇太子书，腾应其选。太子特亲爱腾，饮食赏赐与众有异。顺帝即位，为小黄门，迁至中常侍、大长秋。在省闼三十余年，历事四帝，未尝有过。好进达贤能，终无所毁伤。其所称荐，若陈留虞放、边韶、南阳延固、张温、弘农张奂、颍川堂溪典等，皆致位公卿，而不伐其善。蜀郡太守因计吏修敬于腾，益州刺史种暠于函谷关搜得其笺，上太守，并奏腾内臣外交，所不当为，请免官治罪。帝曰：“笺自外来，腾书不出，非其罪也。”乃寝暠奏。腾不以介意，常称叹暠，以为嵩得事上之节。暠后为司徒，语人曰：“今日为公，乃曹常侍恩也。”腾之行事，皆此类也。桓帝即位，以腾先帝旧臣，忠孝彰著，封费亭侯，加位特进。太和三年，追尊腾曰高皇帝。③《续汉书》曰：嵩字巨高。质性敦慎，所在忠孝。为司隶校尉，灵帝擢拜大司农、大鸿胪，代崔烈为太尉。黄初元年，追尊嵩曰太皇帝。吴人作《曹瞒传》及郭颁《世语》并云：嵩，夏侯氏之子，夏侯惇之叔父。太祖于惇为从父兄弟。</p>
 <p><span style="color: red; font-size: 80%"> [峰按] 堂而皇之用盗狗，霸气。<a href="曹爽.html#三国志-曹爽-爽等伏诛">《三国志》</a></span></p>
-
+<p><a href="蒋济.html#三国志-蒋济">自嘲+拜官</a></p>
 
 </div>
 </div>
 <!-- </div> -->
-
-
-
             </section>
 
           </div>
         </div>
       </div>
-<a href="曹爽.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="references.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="三国魏帝.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="三国魏官员.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
