githubhy published a site update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-09" />
+<meta name="date" content="2022-05-10" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -98,7 +98,7 @@
 <li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#文帝"><i class="fa fa-check"></i>文帝</a></li>
 <li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#明帝"><i class="fa fa-check"></i>明帝</a></li>
 <li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#景初"><i class="fa fa-check"></i>景初</a></li>
-<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#齐王"><i class="fa fa-check"></i>齐王</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#三国志-蒋济-齐王"><i class="fa fa-check"></i>齐王</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
@@ -142,7 +142,7 @@
 <div id="header">
 <h1 class="title">历史上的一些人</h1>
 <p class="author"><em>林峰</em></p>
-<p class="date"><em>2022-05-09</em></p>
+<p class="date"><em>2022-05-10</em></p>
 </div>
 <div id="section" class="section level1 unnumbered">
 <h1></h1>
