--- a/蒋济.html
+++ b/蒋济.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-09" />
+<meta name="date" content="2022-05-10" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -98,7 +98,7 @@
 <li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#文帝"><i class="fa fa-check"></i>文帝</a></li>
 <li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#明帝"><i class="fa fa-check"></i>明帝</a></li>
 <li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#景初"><i class="fa fa-check"></i>景初</a></li>
-<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#齐王"><i class="fa fa-check"></i>齐王</a></li>
+<li class="chapter" data-level="" data-path="蒋济.html"><a href="蒋济.html#三国志-蒋济-齐王"><i class="fa fa-check"></i>齐王</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
@@ -163,11 +163,26 @@
 <div id="景初" class="section level4 hasAnchor">
 <h4>景初<a href="蒋济.html#景初" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>景初中，外勤征役，内务宫室，怨旷者多，而年谷饥俭。济上疏曰：“陛下方当恢崇 <span style="color: magenta; font-size: 80%">犹言发扬光大</span> 前绪 <span style="color: magenta; font-size: 80%">前人的事业</span> ，光济 <span style="color: magenta; font-size: 80%">广益，光大</span> 遗业，诚未得高枕而治也。今虽有十二州，至于民数，不过汉时一大郡。二贼未诛，宿兵边陲，且耕且战，怨旷积年。宗庙宫室，百事草创，农桑 <span style="color: magenta; font-size: 80%">耕种田地与植桑饲蚕。泛指一般农事生</span> 者少，衣食者多，今其所急，唯当息耗百姓，不至甚弊。弊攰 <span style="color: magenta; font-size: 80%">guì。精疲力尽</span> 之民，傥有水旱，百万之众，不为国用。凡使民心须农隙，不夺其时。夫欲大兴功之君，先料其民力而燠 <span style="color: magenta; font-size: 80%">yù。温暖</span> 休之。句践养胎<a href="#fn52" class="footnote-ref" id="fnref52"><sup>52</sup></a> 以待用，昭王恤病 <span style="color: magenta; font-size: 80%">谓救援有危难的人</span> 以雪仇，故能以弱燕服强齐，赢越灭劲吴。今二敌不攻不灭，不事 <span style="color: magenta; font-size: 80%">不侍奉，不服事</span> 即侵，当身 <span style="color: magenta; font-size: 80%">谓及于自身</span> 不除，百世之责也。以陛下圣明神武之略，舍其缓者，专心讨贼，臣以为无难矣。又欢娱之耽，害于精爽。神太用则竭，形太劳则弊 <span style="color: magenta; font-size: 80%">衰落,疲惫</span> 。愿大简 <span style="color: magenta; font-size: 80%">通“柬”。选择</span> 贤妙 <span style="color: magenta; font-size: 80%">才德美好的人</span> ，足以充‘百斯男’ <span style="color: red; font-size: 80%"> [峰按] 出《诗经·大雅·思齐》“大姒嗣徽音，则百斯男”</span><a href="#fn53" class="footnote-ref" id="fnref53"><sup>53</sup></a> 者。其冗散未齿 <span style="color: magenta; font-size: 80%">指未成年</span> ，且悉分出，务在清静。”诏曰：“微 <span style="color: magenta; font-size: 80%">要没有,要不是</span> 护军，吾弗闻斯言也。”①</p>
-<p>①《汉晋春秋》曰：<em>公孙渊</em> <span style="color: magenta; font-size: 80%">辽东公孙氏</span> 闻魏将来讨，复称臣于孙权，乞兵自救。帝问济：“孙权其救辽东乎？”济曰：“彼知官备以固，利不可得，深入则非力所能，浅入则劳而无获。权虽子弟在危，犹将不动，况异域之人，兼以往者之辱乎！今所以外扬此声者，谲其行人疑于我，我之不克，冀折后事已耳。然沓渚之间，去渊尚远，若大军相持，事不速决，则权之浅规，或能轻兵掩袭，未可测也。”</p>
+<p>①《汉晋春秋》曰：<em>公孙渊</em> <span style="color: magenta; font-size: 80%">辽东公孙氏</span> 闻魏将来讨，复称臣于孙权，乞兵自救。帝问济：“孙权其救辽东乎？”济曰：“彼知官 <span style="color: magenta; font-size: 80%">国家</span> 备以固，利不可得，深入则非力所能，浅入则劳而无获。权虽子弟在危，犹 <span style="color: magenta; font-size: 80%">还；尚且</span> 将不动，况异域之人，兼以 <span style="color: magenta; font-size: 80%">以及</span> 往者 <span style="color: magenta; font-size: 80%">以往</span> 之辱 <span style="color: magenta; font-size: 80%">公孙康斩杀孙权来使</span> 乎！今所以外扬此声者，谲 <span style="color: magenta; font-size: 80%">jué。欺骗;诈骗</span> 其行人 <span style="color: magenta; font-size: 80%">出行的人；出征的人；或使者</span> 疑于我，我之不克 <span style="color: magenta; font-size: 80%">攻下据点；战胜</span> ，冀 <span style="color: magenta; font-size: 80%">希望；希图</span> 折 <span style="color: magenta; font-size: 80%">折返</span> 后事已 <span style="color: magenta; font-size: 80%">罢了,算了</span> 耳。然沓渚<a href="#fn54" class="footnote-ref" id="fnref54"><sup>54</sup></a> 之间，去渊尚远，若大军相持，事不速决，则权之浅规 <span style="color: magenta; font-size: 80%">谋求;谋划</span> ，或能轻兵掩袭，未可测也。”</p>
 </div>
-<div id="齐王" class="section level4 hasAnchor">
-<h4>齐王<a href="蒋济.html#齐王" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>齐王即位，徙为领军将军，进爵昌陵亭侯，①迁太尉。初，侍中高堂隆论郊祀事，以魏为舜后，推舜配天。济以为舜本姓妫，其苗曰田，非曹之先，著文以追诘隆。②是时，曹爽专政，丁谧，邓飏等轻改法度。会有日蚀变，诏群臣问其得失，济上疏曰：“昔大舜佐治，戒在比周；周公辅政，慎于其朋；齐侯问灾，晏婴对以布惠；鲁君问异，臧孙答以缓役。应天塞变，乃实人事。今二贼未灭，将士暴露已数十年，男女怨旷，百姓贫苦。夫为国法度，惟命世大才，乃能张其纲维以垂于后，岂中下之吏所宜改易哉？终无益于治，适足伤民，望宜使文武之臣各守其职，率以清平，则和气祥瑞可感而致也。”以随太傅司马宣王屯洛水浮桥，诛曹爽等，进封都乡侯，邑七百户。济上疏曰：“臣忝宠上司，而爽敢苞藏祸心，此臣之无任也。太傅奋独断之策，陛下明其忠节，罪人伏诛，社稷之福也。夫封宠庆赏，必加有功。今论谋则臣不先知，语战则非臣所率，而上失其制，下受其弊。臣备宰司，民所具瞻，诚恐冒赏之渐自此而兴，推让之风由此而废。”固辞，不许。③是岁薨，谥曰景侯。④子秀嗣。秀薨，子凯嗣。咸熙中，开建五等，以济著勋前朝，改封凯为下蔡子。</p>
+<div id="三国志-蒋济-齐王" class="section level4 hasAnchor">
+<h4>齐王<a href="蒋济.html#三国志-蒋济-齐王" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>齐王即位，徙为领军将军<a href="#fn55" class="footnote-ref" id="fnref55"><sup>55</sup></a> ，进爵昌陵亭侯，①迁太尉。
+初，侍中 <em>高堂隆</em><a href="#fn56" class="footnote-ref" id="fnref56"><sup>56</sup></a> 论郊祀事，以魏为舜后，推舜配天。济以为舜本姓妫 <span style="color: magenta; font-size: 80%">guī</span> ，其苗 <span style="color: magenta; font-size: 80%">子孙后代</span> 曰田，非曹之先，著文以追诘 <span style="color: magenta; font-size: 80%">追问诘难</span> 隆。②
+是时，曹爽专政，丁谧，邓飏等轻 <span style="color: magenta; font-size: 80%">轻率,不稳重</span> 改法度。会有日蚀变，诏群臣问其得失，济上疏曰：“昔大舜佐治，戒在比周 <span style="color: magenta; font-size: 80%">结党营私；集结；联合</span> ；周公辅政，慎于其朋；齐侯问灾，晏婴对以布惠<a href="#fn57" class="footnote-ref" id="fnref57"><sup>57</sup></a> ；鲁君问异，臧孙答以缓役。应天塞变，乃实人事。今二贼未灭 <span style="color: red; font-size: 80%"> [峰按] 二贼实乃济心头之患，非君患也😂</span> ，将士暴露已数十年，男女怨旷，百姓贫苦。夫为国法度，惟命世大才，乃能张其纲维 <span style="color: magenta; font-size: 80%">总纲和四维。比喻法度</span> 以垂于后，岂中下之吏所宜改易哉？终无益于治，适足伤民，望宜使文武之臣各守其职，率以清平，则和气祥瑞可感而致也。”
+以随太傅司马宣王屯洛水浮桥，诛曹爽等，进封都乡侯，邑七百户。济上疏曰：“臣忝宠 <span style="color: magenta; font-size: 80%">谦言厚颜得宠</span> 上司，而爽敢苞藏祸心，此臣之无任也。太傅奋独断之策，陛下明其忠节，罪人伏诛，社稷之福也。夫封宠庆赏，必加有功。今论谋则臣不先知，语战则非臣所率，而上失其制，下受其弊。臣备 <span style="color: magenta; font-size: 80%">凑数;充数，居官的自谦之词</span> 宰司 <span style="color: magenta; font-size: 80%">谓百官之长，处宰辅之位者</span> ，民所具瞻 <span style="color: magenta; font-size: 80%">仰慕</span> ，诚恐冒赏之渐 <span style="color: magenta; font-size: 80%">征兆,迹象</span> 自此而兴，推让之风由此而废。”固辞，不许。
+③是岁薨，谥曰景<a href="#fn58" class="footnote-ref" id="fnref58"><sup>58</sup></a> 侯。④子秀嗣。秀薨，子凯嗣。咸熙<a href="#fn59" class="footnote-ref" id="fnref59"><sup>59</sup></a> 中，开建五等<a href="#fn60" class="footnote-ref" id="fnref60"><sup>60</sup></a>，以济著 <span style="color: magenta; font-size: 80%">显著;突出</span> 勋前朝，改封凯为下蔡子。</p>
+<ul>
+<li>①《列异传》曰：济为领军，其妇梦见亡儿涕泣曰：“死生异路，我生时为卿相子孙，今在地下为泰山伍伯 <span style="color: magenta; font-size: 80%">亦作“伍百”。役卒。多为舆卫前导或执杖行刑；或职官名。古代军队以五人为伍，一伍之长称为「伍伯」。也称为「五百」、「伍长</span> ，憔悴困辱，不可复言。今太庙西讴士<span style="color: magenta; font-size: 80%">唱赞的人</span> <em>孙阿</em> ，今见 <span style="color: magenta; font-size: 80%">孙阿被召</span> 召为泰山令，愿母为白侯 <span style="color: magenta; font-size: 80%">昌陵亭侯，即济</span> ，属阿令转我得乐处。”言讫，母忽然惊寤，明日以白济。济曰：“梦为尔 <span style="color: magenta; font-size: 80%">如此;这样</span> 耳，不足怪也。”
+明日暮，复梦曰：“我来迎新君，止在庙下。未发 <span style="color: magenta; font-size: 80%">出发，下同</span> 顷 <span style="color: magenta; font-size: 80%">少顷,短时间</span> ，暂得来归。新君明日日中当发，临发多事，不复得归，永辞于此。侯气 <span style="color: magenta; font-size: 80%">气派;气概</span> 强，难感悟，故自诉于母，愿重启侯，何惜不一试验之？”遂道阿之形状，言甚备悉。天明，母重启侯：“虽云梦不足怪，此何太适 <span style="color: magenta; font-size: 80%">相合、相当</span> ？适亦何惜不一验之？”
+济乃遣人诣太庙下，推问孙阿，果得之，形状证验悉如儿言。济涕泣曰：“几负吾儿！”于是乃见孙阿，具语其事。阿不惧当死，而喜得为泰山令，惟恐济言不信也。曰：“若如节下 <span style="color: magenta; font-size: 80%">对将领的敬称。古代授节予将帅以加重职权，故敬称将领为节下。后对使臣或地方疆吏亦称节下</span> 言，阿之愿也。不知贤子欲得何职？”济曰：“随地下乐者与之。”阿曰：“辄当奉教。”乃厚赏之，言讫遣还。
+济欲速知其验，从领军门至庙下，十步安一人，以传〔阿〕消息。辰时传阿心痛 <span style="color: magenta; font-size: 80%">7时至9时，别称食时</span> ，巳时 <span style="color: magenta; font-size: 80%">sì shí。上午9时至中午11时</span> 传阿剧，日中传阿亡。济泣曰：“虽哀吾儿之不幸，（自）〔且〕喜亡者有知。”
+后月余，儿复来语母曰：“已得转为录事 <span style="color: magenta; font-size: 80%">西汉郡县置录事掾史，简称录事，掌文书等事。三国魏晋将军府和郡县置录事，也掌文书之类。北魏、北齐、隋、唐皆置。</span> 矣。”</li>
+<li>②臣松之案蒋济《立郊议》称《曹腾<a href="#fn61" class="footnote-ref" id="fnref61"><sup>61</sup></a> 碑文》云“曹氏族出自邾 <span style="color: magenta; font-size: 80%">zhū</span><a href="#fn62" class="footnote-ref" id="fnref62"><sup>62</sup></a>”，《魏书》述曹氏胤绪 <span style="color: magenta; font-size: 80%">yìn xù。后代</span> 亦如之。魏武作《家传》，自云曹叔振铎 <span style="color: magenta; font-size: 80%">zhèn duó</span><a href="#fn63" class="footnote-ref" id="fnref63"><sup>63</sup></a> 之后。故陈思王作《武帝诔 <span style="color: magenta; font-size: 80%">lěi。哀悼死者的文章</span> 》曰：“於穆 <span style="color: magenta; font-size: 80%">《诗·周颂·清庙》:“於穆清庙。”毛传:“於,叹辞也。穆,美。</span> 武皇，胄 <span style="color: magenta; font-size: 80%">zhòu。古代称帝王或贵族的后代</span> 稷 <span style="color: magenta; font-size: 80%">社稷</span> 胤 <span style="color: magenta; font-size: 80%">后代；后嗣</span> 周。”此其不同者也。
+及至景初，明帝从高堂隆议，谓魏为舜后，后魏为《禅晋文》，称“昔我皇祖有虞 <span style="color: magenta; font-size: 80%">有虞氏。古部落名。传说其首领舜受尧禅﹐都蒲阪。故址在今山西省永济县东南。有﹐词头。</span>”，则其异弥 <span style="color: magenta; font-size: 80%">更加;越发</span> 甚。寻济难隆，及与尚书 <em>缪袭</em><a href="#fn64" class="footnote-ref" id="fnref64"><sup>64</sup></a> 往反，并有理据，文多不载。济亦未能定氏族所出，但谓“魏非舜后而横 <span style="color: magenta; font-size: 80%">hèng。以威力相胁曰横</span> 祀非族，降黜 <span style="color: magenta; font-size: 80%">贬黜</span> 太祖，不配正天，皆为缪妄”。然于时竟莫能正。济又难：<em>郑玄</em> 注《祭法》云：“有虞以上尚德，禘郊祖宗，配用有德，自夏已下，稍用其姓氏。”济曰：“夫虬龙神于獭，獭自祭其先，不祭虬龙也。骐 白虎仁于豺，豺自祭其先，不祭骐 <span style="color: magenta; font-size: 80%">青黑色有如棋盘格子纹的马</span> <span style="color: red; font-size: 80%"> [峰按] 此处取图纹</span> 虎也。如玄之说，有虞已上，豺獭之不若邪？臣以为祭法所云，见疑学者久矣，郑玄不考正其违 <span style="color: magenta; font-size: 80%">过失,错误</span> 而就通其义。”济豺獭之譬，虽似俳谐 <span style="color: magenta; font-size: 80%">pái xié。诙谐戏谑的言辞</span> ，然其义旨，有可求焉。</li>
+<li>③孙盛曰：蒋济之辞邑 <span style="color: magenta; font-size: 80%">辞去封邑。借指辞官退休</span> ，可谓不负心矣。语曰：“不为利回 <span style="color: magenta; font-size: 80%">屈</span> ，不为义疚 <span style="color: magenta; font-size: 80%">因自己过失而造成的心内痛苦</span> 。<a href="#fn65" class="footnote-ref" id="fnref65"><sup>65</sup></a>”蒋济其有焉。</li>
+<li>④《世语》曰：初，济随司马宣王屯洛水浮桥，济书与曹爽，言宣王旨“惟免官而已”，爽遂诛灭 <span style="color: red; font-size: 80%"> [峰按] 爽素知济品德，所以信之。懿亦知济言重，故遣济言于爽，得其信任。济知爽当诛，因其行僭越，唯病懿行之不端也</span> 。济病其言之失信，发病卒。<span style="color: red; font-size: 80%"> [峰按] <a href="曹爽.html#蒋济病司马懿">《三国志·曹爽传》亦述</a></span></li>
+</ul>
 
 </div>
 </div>
@@ -191,6 +206,18 @@
 <li id="fn51"><p>东汉献帝建安十二年(207)曹操改丞相府护军为中护军，其资重者迁护军将军，四品，职掌相同，典武官选举，与中领军（领军将军）同掌禁军，出征时督护诸将，隶属领军。西晋不典选举，不隶领军，自领禁卫营兵，三品。东晋元帝永昌元年(322)省并入领军，明帝太宁二年(324)复分置。<a href="蒋济.html#fnref51" class="footnote-back">↩︎</a></p></li>
 <li id="fn52"><p>谓蕃育人民。《晋书·刑法志》：“刑法峻重，非句践养胎之义也。”参阅。汉，赵晔《吴越春秋·勾践伐吴外传》<a href="蒋济.html#fnref52" class="footnote-back">↩︎</a></p></li>
 <li id="fn53"><p>诗歌的重点是颂扬文王的“圣德”，同时也赞扬了其母太任、其妻太姒。诗人认为她们是“文王所以圣”的根本。其中“大姒嗣徽音，则百斯男”句的意思是：太姒继承太任、太姜的美德，必能多生儿子。大姒就是太姒，她是周文王的妃子；嗣就是继承的意思；这里的“徽音”跟安徽没有关系，徽是美，音是声誉的意思，徽音就是美誉、美德的意思。百斯男即百男，极言生子之多。<a href="蒋济.html#fnref53" class="footnote-back">↩︎</a></p></li>
+<li id="fn54"><p>清人顾祖禹在《读史方舆纪要》中说：“沓氏县在金州卫东南，汉县，属辽东郡，晋废”，“县西南临海渚，谓之沓渚”。<a href="蒋济.html#fnref54" class="footnote-back">↩︎</a></p></li>
+<li id="fn55"><p>官名。东汉献帝延康元年(220)曹丕置，职掌与中领军同，但任职者资重于中领军，省称领军。三国魏沿置，为禁卫军最高统帅，由亲信或宗室担任，权势极重。吴亦置。<a href="蒋济.html#fnref55" class="footnote-back">↩︎</a></p></li>
+<li id="fn56"><p>高堂隆（2世纪？－237年），字升平，复姓高堂，泰山郡东平阳县（今山东省新泰市）人。西汉经学家高堂生之后<a href="蒋济.html#fnref56" class="footnote-back">↩︎</a></p></li>
+<li id="fn57"><p>《晏子春秋·第八卷·外篇第八》：景公谓晏子曰：“东海之中，有水而赤，其中有枣，华而不实，何也？”晏子对曰：“昔者秦缪公乘龙舟而理天下，以黄布裹烝枣，至东海而捐其布，破黄布，故水赤；烝枣，故华而不实。”公曰：“吾详问子何为？”对曰：“婴闻之，详问者，亦详对之也。”<a href="蒋济.html#fnref57" class="footnote-back">↩︎</a></p></li>
+<li id="fn58"><p>景：由义而济曰景；耆意大虑曰景；布义行刚曰景；致志大图曰景；繇义而成曰景；德行可仰曰景；法义而齐曰景；明照旁周曰景<a href="蒋济.html#fnref58" class="footnote-back">↩︎</a></p></li>
+<li id="fn59"><p>咸熙是三国时期魏国魏元帝曹奂（陈留王）的第二个年号。历时两年(264~265)。也是曹魏政权最后一个年号。咸熙二年十二月，曹奂被迫禅位于司马炎。曹魏灭亡，晋朝建立<a href="蒋济.html#fnref59" class="footnote-back">↩︎</a></p></li>
+<li id="fn60"><p>魏元帝咸熙元年（264年），开建五等，子爵为第四等，官品第一，分大国子（地方五十里，食邑800户）、次国子（地方四十五里，食邑600户）两级，封国的名称并不一定采用县名，封国也并未纳入到郡县行政体系中。子国置相、典祠令、典书丞、典卫丞等官，车前司马（4人）、旅贲（20人）等吏，国主置妾3人<a href="蒋济.html#fnref60" class="footnote-back">↩︎</a></p></li>
+<li id="fn61"><p>东汉沛国谯人，字季兴。安帝时宦官。顺帝时为中常侍。以与太仆州辅等定策迎立桓帝，封费亭侯，迁大长秋。在宫廷三十余年，历侍四帝。魏明帝太和中追尊高帝。<a href="蒋济.html#fnref61" class="footnote-back">↩︎</a></p></li>
+<li id="fn62"><p>邾,周武王时所封曹姓国也。始封之君曰侠,为鲁附庸<a href="蒋济.html#fnref62" class="footnote-back">↩︎</a></p></li>
+<li id="fn63"><p>曹叔振铎，姬姓，名振铎，周文王姬昌与太姒所生第六子，周武王姬发同母弟，周代诸侯国曹国始封之君，曹姓始祖<a href="蒋济.html#fnref63" class="footnote-back">↩︎</a></p></li>
+<li id="fn64"><p>缪袭（186—245年），字熙伯。东海兰陵（今山东苍山兰陵镇）人。三国时曹魏文学家。先辟御史大夫府，历事魏四主，后拜散骑常侍。官至尚书、光禄勋。有《列女传赞》一卷、《集》五卷。钟嵘《诗品》称：“熙伯《挽歌》，唯以造哀尔。<a href="蒋济.html#fnref64" class="footnote-back">↩︎</a></p></li>
+<li id="fn65"><p>自《后汉书·列传·文苑列传下》:君子之行，动则思义，不为利回，不为义疚<a href="蒋济.html#fnref65" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
