githubhy published a site update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-10" />
+<meta name="date" content="2022-05-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -117,6 +117,11 @@
 </ul></li>
 </ul></li>
 </ul></li>
+<li class="chapter" data-level="" data-path="唐官员.html"><a href="唐官员.html"><i class="fa fa-check"></i>唐官员</a><ul>
+<li class="chapter" data-level="" data-path="狄仁杰.html"><a href="狄仁杰.html"><i class="fa fa-check"></i>狄仁杰</a><ul>
+<li class="chapter" data-level="" data-path="狄仁杰.html"><a href="狄仁杰.html#唐人轶事汇编卷八"><i class="fa fa-check"></i>《唐人轶事汇编·卷八》</a></li>
+</ul></li>
+</ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>参考文献</a></li>
 <li class="divider"></li>
@@ -142,7 +147,7 @@
 <div id="header">
 <h1 class="title">历史上的一些人</h1>
 <p class="author"><em>林峰</em></p>
-<p class="date"><em>2022-05-10</em></p>
+<p class="date"><em>2022-05-13</em></p>
 </div>
 <div id="section" class="section level1 unnumbered">
 <h1></h1>
