--- a/references.html
+++ b/references.html
@@ -23,14 +23,14 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-10" />
+<meta name="date" content="2022-05-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="司马懿.html"/>
+<link rel="prev" href="狄仁杰.html"/>
 
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -115,6 +115,11 @@
 </ul></li>
 <li class="chapter" data-level="" data-path="司马懿.html"><a href="司马懿.html#品性"><i class="fa fa-check"></i>品性</a></li>
 </ul></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="唐官员.html"><a href="唐官员.html"><i class="fa fa-check"></i>唐官员</a><ul>
+<li class="chapter" data-level="" data-path="狄仁杰.html"><a href="狄仁杰.html"><i class="fa fa-check"></i>狄仁杰</a><ul>
+<li class="chapter" data-level="" data-path="狄仁杰.html"><a href="狄仁杰.html#唐人轶事汇编卷八"><i class="fa fa-check"></i>《唐人轶事汇编·卷八》</a></li>
 </ul></li>
 </ul></li>
 <li class="appendix"><span><b>附录</b></span></li>
@@ -218,12 +223,26 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
-<a href="司马懿.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="狄仁杰.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
