--- a/三国魏帝.html
+++ b/三国魏帝.html
@@ -23,14 +23,14 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-14" />
+<meta name="date" content="2022-05-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="index.html"/>
+<link rel="prev" href="一些惊人言语.html"/>
 <link rel="next" href="曹操.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -75,6 +75,9 @@
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
+<li class="chapter" data-level="" data-path="林峰评.html"><a href="林峰评.html"><i class="fa fa-check"></i>林峰评</a><ul>
+<li class="chapter" data-level="" data-path="一些惊人言语.html"><a href="一些惊人言语.html"><i class="fa fa-check"></i>一些惊人言语</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="三国魏帝.html"><a href="三国魏帝.html"><i class="fa fa-check"></i>三国魏帝</a><ul>
 <li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
 <li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>《三国志·魏书一·武帝纪》</a></li>
@@ -152,7 +155,7 @@
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="一些惊人言语.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="曹操.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
