--- a/蒋济.html
+++ b/蒋济.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-14" />
+<meta name="date" content="2022-05-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -75,6 +75,9 @@
 
 <li class="divider"></li>
 <li><a href="index.html#section"></a></li>
+<li class="chapter" data-level="" data-path="林峰评.html"><a href="林峰评.html"><i class="fa fa-check"></i>林峰评</a><ul>
+<li class="chapter" data-level="" data-path="一些惊人言语.html"><a href="一些惊人言语.html"><i class="fa fa-check"></i>一些惊人言语</a></li>
+</ul></li>
 <li class="chapter" data-level="" data-path="三国魏帝.html"><a href="三国魏帝.html"><i class="fa fa-check"></i>三国魏帝</a><ul>
 <li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html"><i class="fa fa-check"></i>曹操</a><ul>
 <li class="chapter" data-level="" data-path="曹操.html"><a href="曹操.html#三国志魏书一武帝纪"><i class="fa fa-check"></i>《三国志·魏书一·武帝纪》</a></li>
@@ -156,7 +159,7 @@
 <div id="文帝" class="section level4 hasAnchor">
 <h4>文帝<a href="蒋济.html#文帝" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>文帝即王位，转为相国长史<a href="#fn44" class="footnote-ref" id="fnref44"><sup>44</sup></a>。及践阼 <span style="color: magenta; font-size: 80%">即帝位。“践，履也；阼，主人阶也。天子祭祀升阼阶……履主阶行事，故云践阼也。”</span> ，出为东中郎将<a href="#fn45" class="footnote-ref" id="fnref45"><sup>45</sup></a> 。济请留，诏曰：“高祖歌曰‘安得猛士守四方’！天下未宁，要须良臣以镇边境。如其无事，乃还鸣玉 <span style="color: magenta; font-size: 80%">比喻出仕在朝</span> ，未为后也。”
-济上《万机论》，帝善之。人为散骑常侍。时有诏，诏征南将军<em>夏侯尚</em>曰：“卿腹心重将，（时）〔特〕当任使。恩施足死，惠爱可怀。作威作福，杀人活人。”尚以示济。济既至，帝问曰：“卿所闻见天下风教何如？”济对曰：“未有他善，但见亡国之语耳。”帝忿然作色而问其故，济具以答，因曰：“夫‘作威作福’，《书》<a href="#fn46" class="footnote-ref" id="fnref46"><sup>46</sup></a> 之明诫。‘天子无戏言’，古人所慎。惟陛下察之！”于是帝意解，遣追取前诏。 <span style="color: red; font-size: 80%"> [峰按] 此段言济忠君尽谏</span>
+济上《万机论》，帝善之。人为散骑常侍。<span id="曹丕诏夏侯尚">时有诏</span>，诏征南将军<em>夏侯尚</em>曰：“卿腹心重将，（时）〔特〕当任使。恩施足死，惠爱可怀。作威作福，杀人活人。”尚以示济。济既至，帝问曰：“卿所闻见天下风教何如？”济对曰：“未有他善，但见亡国之语耳。”帝忿然作色而问其故，济具以答，因曰：“夫‘作威作福’，《书》<a href="#fn46" class="footnote-ref" id="fnref46"><sup>46</sup></a> 之明诫。‘天子无戏言’，古人所慎。惟陛下察之！”于是帝意解，遣追取前诏。 <span style="color: red; font-size: 80%"> [峰按] 此段言济忠君尽谏</span>
 黄初三年，与大司马<em>曹仁</em>征吴，济别袭羡溪。仁欲攻濡须 <span style="color: magenta; font-size: 80%"><a href="https://zh.wikipedia.org/zh-cn/%E6%BF%A1%E9%A1%BB%E5%8F%A3%E4%B9%8B%E6%88%98">濡须口之战</a></span> 洲中，济曰：“贼据西岸，列船上流，而兵入洲中，是为自内地狱，危亡之道也。”仁不从，果败。仁薨，复以济为东中郎将，代领其兵。诏曰：“卿兼资文武，志节〔慷慨〕，常有超越江湖吞吴会之志，故复授将率之任。”顷之，征为尚书。车驾 <span style="color: magenta; font-size: 80%">天子出巡时乘坐的马车。后亦用为天子的代称</span> 幸广陵，济表水道难通，又上《三州论》以讽帝。帝不从，于是战船数千皆滞不得行。议者欲就留兵屯田，济以为东近湖，北临淮，若水盛时，贼易为寇，不可安屯。帝从之，车驾即发。还到精湖，水稍尽，尽留船付济。船本历适 <span style="color: magenta; font-size: 80%">适历。谓分布稀疏均匀</span> 数百里中，济更凿地作四五道，蹴船令聚。豫作土豚 <span style="color: magenta; font-size: 80%">盛有沙土的草袋子，用来防水或筑城，形状如小猪，故名</span> 遏断 <span style="color: magenta; font-size: 80%">断遏 duàn è。阻拦隔断</span> 湖水，皆引后船，一时开遏 <span style="color: magenta; font-size: 80%">堰。动词时为抑制;阻止</span> 入淮中。帝还洛阳，谓济曰：“事不可不晓。吾前决谓分半烧船于山阳池<a href="#fn47" class="footnote-ref" id="fnref47"><sup>47</sup></a> 中，卿于后致之，略与吾俱至谯。又每得所陈，实入吾意。自今讨贼计画，善思论之。”</p>
 </div>
 <div id="明帝" class="section level4 hasAnchor">
