githubhy published a site update

--- a/奇人轶事惊人言语.html
+++ b/奇人轶事惊人言语.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-16" />
+<meta name="date" content="2022-05-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -177,6 +177,7 @@
 <ul>
 <li>曹丕曾经在圣旨里给大臣说，可以作威作福，死人活人。见 <a href="蒋济.html#曹丕诏夏侯尚">《三国志·蒋济传》</a>。</li>
 <li>宋仁宗身世由杨淑妃告知。见<a href="李宸妃.html#杨淑妃语仁宗">《宋汇编》</a></li>
+<li>宋仁宗生母好手段和仁宗人称赤脚仙人。见<a href="李宸妃.html#李宸妃上位">《宋汇编》</a></li>
 </ul>
 
 </div>
