--- a/杨淑妃.html
+++ b/杨淑妃.html
@@ -23,7 +23,7 @@
 <meta name="author" content="林峰" />
 
 
-<meta name="date" content="2022-05-16" />
+<meta name="date" content="2022-05-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -177,7 +177,7 @@
 <div id="宋人轶事汇编卷一-1" class="section level3 hasAnchor">
 <h3>《宋人轶事汇编·卷一》<a href="杨淑妃.html#宋人轶事汇编卷一-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ol style="list-style-type: decimal">
-<li>上幼冲即位，章献性严，动以礼法禁约之，未尝假以颜色，章惠以恩抚之。上多苦风痰，章献禁虾蟹海物不得进御，章惠常藏弆以食之，曰：‘太后何苦虐吾儿如此。’上由是怨章献而亲章惠，谓章献为大娘，章惠为小娘。及章献崩，尊章惠为太后，所以奉事曲尽恩意。景祐中，薨，神主祔于奉慈庙。《涑水记闻》卷八。</li>
+<li>上 <span style="color: magenta; font-size: 80%">仁宗</span> 幼冲 <span style="color: magenta; font-size: 80%">年龄幼小</span> 即位，章献性严，动 <span style="color: magenta; font-size: 80%">动不动，常常</span> 以礼法禁约之，未尝假以颜色 <span style="color: magenta; font-size: 80%">在态度和言辞上表示友好</span> ，章惠以恩抚之。上多苦风痰，章献禁虾蟹海物不得进御，章惠常藏弆 <span style="color: magenta; font-size: 80%">jǔ。收藏</span> 以食之，曰：‘太后何苦虐吾儿如此。’上由是怨章献而亲章惠 <span style="color: red; font-size: 80%"> [峰按] 刘氏用心良苦，杨氏不知，抑或明知故不知</span> ，谓章献为大娘，章惠为小娘 <span style="color: red; font-size: 80%"> [峰按] 为何不是大娘娘、小娘娘</span> 。及章献崩，尊章惠为太后，所以奉事曲尽 <span style="color: magenta; font-size: 80%">曲尽，竭尽</span> 恩意。景祐中，薨，神主祔于奉慈庙。《涑水记闻》卷八。</li>
 </ol>
 </div>
 </div>
